# harmonized-telemetry-format

./: .gitignore  README.md  pyproject.toml
htf_core/: models.py  reader.py  writer.py
tests/: test_reader.py  test_writer.py
