[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "htf-core"
version = "1.0.0a1"
authors = [
    { name="Max Schlosser", email="schlosse@hs-mittweida.de" },
]
description = "Core library for reading and writing the Harmonized Telemetry Format (HTF)."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Data Analysis",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/Schloool/harmonized-telemetry-format"
"Bug Tracker" = "https://github.com/Schloool/harmonized-telemetry-format/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["htf_core"]
